objects/Service_Appointment_Snapshot__c.object
<CustomObject>
    <description>This object is used to track the history of service appointments as part of A3SHCRSF3-2</description>
    <fields>
        <fullName>Assigned_Pro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Pro</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointment Snapshots (Assigned Pro)</relationshipLabel>
        <relationshipName>Service_Appointment_Snapshots1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_DateTime__c</fullName>
        <description>as part of A3SHCRSF3-2</description>
        <formula>DATETIMEVALUE( CreatedDate )</formula>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dispatcher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dispatcher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Appointment_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will be true if SA is Scheduled as part of A3SHCRSF3-2</description>
        <label>Is Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_End_Time__c</fullName>
        <description>SA Schedule end time as part of A3SHCRSF3-2</description>
        <label>Schedule End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Schedule_Start_Time__c</fullName>
        <description>SA Schedule start time as part of A3SHCRSF3-2</description>
        <label>Schedule Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_By__c</fullName>
        <description>SA Scheduled by Agent or Self as part of A3SHCRSF3-2</description>
        <label>Scheduled By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Self-Schedule(Guest)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>as part of A3SHCRSF3-2</description>
        <label>Self Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <description>Parent SA as part of A3SHCRSF3-2</description>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointment Snapshots</relationshipLabel>
        <relationshipName>Service_Appointment_Snapshots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of SA as part of A3SHCRSF3-2</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Outreach Attempted</fullName>
                </value>
                <value>
                    <fullName>Scheduled - On Hold</fullName>
                </value>
                <value>
                    <fullName>On Hold Per Customer</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Canceled - No Contact</fullName>
                </value>
                <value>
                    <fullName>Cannot Complete</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Departed</fullName>
                </value>
                <value>
                    <fullName>Go back</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Need to Reschedule</fullName>
                </value>
                <value>
                    <fullName>Archive - Closed</fullName>
                </value>
                <value>
                    <fullName>Closed - Call Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Appointment Snapshot</label>
    <nameField>
        <displayFormat>SAS- {0000000}</displayFormat>
        <label>Service Appointment Snapshot #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Appointment Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>